--- a/package.json
+++ b/package.json
@@ -69,5 +69,10 @@
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1"
+  },
+  "dependencies": {
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "swiper": "^4.0.0-beta.4"
   }
 }
